# networking-debug-container

./: .gitignore  Dockerfile  Dockerfile.efa  README.md  build.sh  build_docker_image.sh  cmd_runner.sh  deploy_pod_to_node.sh  install-perftest-cuda.sh  networking-debug-pod.yaml  system-packages.txt  verify-tools.sh
inter_node_tests/: README.md  run_ib_write_bw_test.sh
inter_node_tests/multi_nic_ib_write_bw/: 1gpu-pair_4MiB-1qp.json  8gpu-pairs_1MiB-1qp.json  8nic-pairs_1MiB_1qp.json  8nic-pairs_4MiB_4qp.json  README.md  incast-2nics_to1nic.json  multi_nic_ib_write_bw-periodic.sh  multi_nic_ib_write_bw.py  nic_pairs.json  pyproject.toml
inter_node_tests/pingmesh/: README.md  cluster_info-nodes.json  cluster_info-pods.json  pingmesh-eks_h100.json  pingmesh.py  pyproject.toml
inter_node_tests/single_nic_ib_write_bw/: .gitignore  single_nic_ib_write_bw-periodic.sh  single_nic_ib_write_bw.sh
scripts/: README.md  check_iommu_pci_acs.sh  get_iface_to_hca_mapping.sh  get_ifaces_with_ip_addr.sh  gpu_to_hca_mapping.sh  iface_to_hca_mapping.sh  map_vfs_to_pfs.sh
